[tool.poetry]
name = "fasmga_randomapis"
version = "0.1.0"
description = "Fasm.ga Random APIs"
authors = ["Fasm.ga Developers <developers@fasm.ga>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
